DSBD_DocAuth/Deploy_K8s/140-usermanager-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docauth-usermanager-deploy
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: docauth-usermanager-pods
  template:
    metadata:
      labels:
        app: docauth-usermanager-pods
    spec:
      containers:
        - name: usermanager
          image: esseodio/usermanagerimage
          ports:
            - containerPort: 1111
