DSBD_DocAuth/Deploy_K8s/150-tokenmanager-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docauth-tokenmanager-deploy
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: docauth-tokenmanager-pods
  template:
    metadata:
      labels:
        app: docauth-tokenmanager-pods
    spec:
      containers:
        - name: tokenmanager
          image: esseodio/tokenmanagerimage
          ports:
            - containerPort: 2222
