DSBD_DocAuth/Deploy_K8s/160-documentmanager-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docauth-documentmanager-deploy
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: docauth-documentmanager-pods
  template:
    metadata:
      labels:
        app: docauth-documentmanager-pods
    spec:
      containers:
        - name: documentmanager
          image: esseodio/documentmanagerimage
          ports:
            - containerPort: 3333
