DSBD_DocAuth/Deploy_K8s/100-usermanager-service.yaml
apiVersion : v1
kind: Service
metadata:
  name: docauth-usermanager-service
  labels:
    svc: docauth-usermanager
spec:
  selector:
    app: docauth-usermanager-pods
  #type: NodePort
  ports:
    - protocol: TCP
      port: 1111
      targetPort: 8080
