DSBD_DocAuth/Deploy_K8s/120-documentmanager-service.yaml
apiVersion : v1
kind: Service
metadata:
  name: docauth-documentmanager-service
  labels:
    svc: docauth-documentmanager
spec:
  selector:
    app: docauth-documentmanager-pods
  #type: NodePort
  ports:
    - protocol: TCP
      port: 3333
      targetPort: 8080
