DSBD_DocAuth/Deploy_K8s/30-usermanager-mysqldb-service.yaml
apiVersion : v1
kind: Service
metadata:
  name: docauth-mysqluserdb-service
  labels:
    svc: docauth-mysqluserdb
spec:
  selector:
    app: docauth-mysqluserdb-pods
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
