DSBD_DocAuth/Deploy_K8s/60-tokenmanager-mysqldb-service.yaml
apiVersion : v1
kind: Service
metadata:
  name: docauth-mysqltokendb-service
  labels:
    svc: docauth-mysqltokendb
spec:
  selector:
    app: docauth-mysqltokendb-pods
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
