DSBD_DocAuth/Deploy_K8s/90-documentmanager-mysqldb-service.yaml
apiVersion : v1
kind: Service
metadata:
  name: docauth-mysqldocumentdb-service
  labels:
    svc: docauth-mysqldocumentdb
spec:
  selector:
    app: docauth-mysqldocumentdb-pods
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
