DSBD_DocAuth/Deploy_K8s/130-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docauth-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type"
spec:
  rules:
    - host: docauth.dev.loc
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /usersapi
            backend:
              service:
                name: docauth-usermanager-service
                port:
                  number: 1111
          - pathType: ImplementationSpecific
            path: /tokensapi
            backend:
              service:
                name: docauth-tokenmanager-service
                port:
                  number: 2222
          - pathType: ImplementationSpecific
            path: /documentsapi
            backend:
              service:
                name: docauth-documentmanager-service
                port:
                  number: 3333
